--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "backpack/crud": "^6.8",
+        "backpack/permissionmanager": "^7.2",
         "backpack/pro": "^2.2",
         "backpack/theme-tabler": "^1.2",
         "laravel/framework": "^12.0",
